# rusthub

./: .gitignore  Cargo.toml  build.rs  readme.md
src/: cmdmgr.rs  database_mgr.rs  hubgui.rs  main.rs  peripheral_mgr.rs  ui.rs
src/bt/: mod.rs
src/database_mgr/: data.rs  error.rs  message.rs
src/hubgui/: mod.rs
src/peripheral_mgr/: error.rs  message.rs  sensor.rs
src/peripheral_mgr/sensor/: ble.rs  platform.rs
src/ui/: iced_gui.rs  sensorui.slint  slintgui.rs
