[package]
name = "rusthub"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.11.8"
crossbeam-channel = "0.5.15"
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = { version = "0.33.2", features = ["all_loaders"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
uuid = "1.18.1"
chrono = { version = "0.4.44", features = ["serde"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono" ] }
dotenvy = { version = "0.15.7", default-features = false }
