[package]
name = "rusthub"
version = "0.1.0"
build = "build.rs"
edition = "2024"

[features]
default = ["slint_gui"]
iced_gui = [
    "dep:iced"
]
egui_gui = [
    "dep:eframe",
    "dep:egui",
    "dep:egui_extras"
]
slint_gui = [
    "dep:slint",
    "dep:async-compat"
]
# Adds a bunch of sensors to gui for testing
test_sensors = []

[dependencies]
async-compat = { version = "0.2.5", optional = true }
btleplug = { version = "0.12.0", default-features = false }
chrono = { version = "0.4.44", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", default-features = false, optional = true  }
egui_extras = { version = "0.33.3", default-features = false, optional = true  }
env_logger = { version = "0.11.10", default-features = false }
futures = { version = "0.3.32", default-features = false }
iced = { version = "0.14.0", features = ["tokio", "sipper"], optional = true}
itertools = { version = "0.14.0", default-features = false }
log = { version = "0.4.29", default-features = false }
plotters = "0.3.7"
slint = {version = "1.16.0", optional = true}
sqlx = { version = "0.8.6", default-features = false, features = [ "runtime-tokio", "mysql", "chrono" ] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", default-features = false, features = [ "futures-util", "futures-io"] }
uuid = { version = "1.23.0", default-features = false }

[build-dependencies]
slint-build = "1.16.0"
